# WhatsWebService

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PLANNING.md  Makefile  README.md  architecture.md  buf.gen.yaml  docker-compose.apple-music.yml  docker-compose.prod.yml  docker-compose.yml  go.work.example  latency.md
.claude/skills/planning/: SKILL.md
clients/web/: app.js  index.html  style.css
control-plane/: .dockerignore  Dockerfile  Makefile  go.mod  go.sum
control-plane/api/: openapi.yaml
control-plane/cmd/server/: main.go
control-plane/internal/applemusic/: cache.go  cache_test.go  signer.go  signer_test.go
docs/: data-channel-protocol.md  latency-budget.md
inference/asr/: Dockerfile  Makefile  pyproject.toml
inference/asr/src/asr/: __init__.py  config.py  grpc_servicer.py  server.py  service.py  translator.py  vocal_separator.py
inference/asr/tests/: test_service.py
inference/tts/: Dockerfile  Makefile  pyproject.toml
infra/gce/: compute.tf  docker-compose.prod.yml  network.tf  nginx.conf  outputs.tf  startup.sh  terraform.tfvars.example  variables.tf
shared/protos/: buf.yaml
shared/schemas/: command.enunciate.schema.json  command.update.schema.json  envelope.schema.json  event.asr.final.schema.json  event.asr.partial.schema.json  event.error.schema.json  event.ingest.started.schema.json  event.ingest.stopped.schema.json  event.metrics.latency.schema.json  event.tts.done.schema.json  event.tts.marks.schema.json  event.tts.started.schema.json
webrtc-gateway/: Dockerfile  Makefile  go.mod
(+42 files in other folders)
